fixed alignments issues

--- a/css/style.css
+++ b/css/style.css
@@ -6702,24 +6702,6 @@ body {
 .u-right-bleed {
   margin-right: calc(-100vw / 2 + 960px / 2); }
 
-@media (min-width: 576px) {
-  .abs-right {
-    position: absolute;
-    right: 0;
-    top: 24px;
-    bottom: 0;
-    z-index: 1; }
-  .abs-left {
-    position: absolute;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    z-index: 1; }
-  .of {
-    width: 100%;
-    object-fit: cover;
-    height: 442px; } }
-
 .btn {
   font-size: 2.4rem;
   font-weight: 600;
@@ -6758,12 +6740,15 @@ body {
   cursor: pointer; }
 
 .getInTouch {
+  display: flex;
+  flex-direction: column;
   height: 100%;
   background-color: #fff;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16); }
   .getInTouch__body {
     padding: 4rem; }
   .getInTouch__footer {
+    margin-top: auto;
     padding-right: 4rem;
     padding-bottom: 2rem;
     text-align: right;
@@ -6797,19 +6782,23 @@ body {
   background-size: cover; }
 
 .listComponent {
-  list-style: none; }
+  list-style: none;
+  margin-bottom: 0; }
   .listComponent__item {
-    padding: 1rem;
+    padding: 2rem;
     background-color: #fff;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
-    margin-bottom: 1rem;
+    margin-bottom: 2.5rem;
     position: relative; }
+    .listComponent__item:last-child {
+      margin-bottom: 0; }
   .listComponent__text {
     border-left: 7px solid #0f75bc;
     padding: 1rem;
     color: #0f75bc;
     font-size: 2.4rem;
-    font-weight: 600; }
+    font-weight: 600;
+    margin-bottom: 0; }
   .listComponent--blue__item {
     background-color: #0f75bc; }
   .listComponent--blue__text {
@@ -6821,11 +6810,24 @@ body {
     position: absolute;
     left: -40px;
     /*adjust manually*/
-    top: 0; }
+    top: 30px; }
   .listComponent__item:nth-child(2)::after {
     content: url("../img/asset-2.png"); }
   .listComponent__item:last-child::after {
     content: url("../img/asset-3.png"); }
+  .listComponent__item::before {
+    /* lines */
+    content: "";
+    position: absolute;
+    left: -25px;
+    /* adjust manually */
+    border-left: 5px solid white;
+    height: 130%;
+    width: 5px; }
+  .listComponent__item:first-child::before {
+    top: 65px; }
+  .listComponent__item:last-child::before {
+    height: 15px; }
   .listComponent--blue__item::after {
     content: url("../img/icons/1-blue.png"); }
   .listComponent--blue__item:nth-child(2)::after {
@@ -6834,19 +6836,6 @@ body {
     content: url("../img/icons/3-blue.png"); }
   .listComponent--blue__item::before {
     border-left: 5px solid #0f75bc; }
-  .listComponent__item::before {
-    /* lines */
-    content: "";
-    position: absolute;
-    left: -25px;
-    /* adjust manually */
-    border-left: 5px solid white;
-    height: 100%;
-    width: 5px; }
-  .listComponent__item:first-child::before {
-    top: 35px; }
-  .listComponent__item:last-child::before {
-    height: 6px; }
   @media (min-width: 992px) {
     .listComponent__item::after {
       /* bullets */
@@ -6895,6 +6884,9 @@ body {
     align-items: center;
     padding: 1.5rem;
     height: 30%; }
+    @media (min-width: 992px) {
+      .testimonialCard__header {
+        height: 35%; } }
   .testimonialCard__body {
     padding: 1.5rem; }
   .testimonialCard__text {
@@ -7019,6 +7011,24 @@ body {
   font-weight: 400;
   letter-spacing: 0.5px;
   line-height: 1.2; }
+
+@media (min-width: 576px) {
+  .abs-right {
+    position: absolute;
+    right: 0;
+    top: 100px;
+    bottom: 0;
+    height: 425px;
+    z-index: 1; }
+  .abs-left {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 1; }
+  .of {
+    width: 100%;
+    height: 425px; } }
 
 #help {
   background-color: #f3f3f3; }
